# netsim

./: .gitignore  Cargo.toml  README.md
algorithms/broadcast/: Cargo.toml
algorithms/broadcast/src/: lib.rs
algorithms/manet/: Cargo.toml
algorithms/manet/src/: lib.rs
algorithms/simple/: Cargo.toml
algorithms/testing/: Cargo.toml
docs/: configs.md
netsim-cli/: Cargo.toml
netsim-cli/src/: app_config.rs  argparser.rs  lib.rs  main.rs  scenario_config.rs
netsim-cli/tests/: scenario_parser_scenarios.rs
netsim-cli/tests/fixtures/: invalid_multi_scene.scenario.toml  valid_initial_events.scenario.toml  valid_traffic_area.scenario.toml
netsim-core/: Cargo.toml
netsim-core/src/: agent.rs  agent_runtime.rs  config.rs  event.rs  event_queue.rs  initial_events.rs  lib.rs  memory.rs  packet.rs  process_send.rs  scenario.rs  sim.rs  statistics.rs  stats.rs
netsim-core/tests/: agent_hash_grid_scenarios.rs  basic_routing_scenarios.rs  event_queue_props.rs  initial_events_scenarios.rs  memory_block_scenarios.rs  process_send_scenarios.rs  routing_table_scenarios.rs  scenario_config_scenarios.rs  scenario_runtime_scenarios.rs  scenario_scenario_integration.rs  sim_pipeline_scenarios.rs  simple_algorithm_pipeline_scenarios.rs  statistics_scenarios.rs  traffic_area_queue_scenarios.rs  traffic_area_scenarios.rs  world_cpu.rs  world_generator_scenarios.rs  world_integration_scenarios.rs  world_scene_generation_scenarios.rs  world_scene_scenarios.rs
netsim-screen/: Cargo.toml
netsim-screen/src/: config.rs  lib.rs
scenarios/: default.scenario.toml
(+9 files in other folders)
